# Cosmic_Ray_Muon_Detection_and_Tracking

./: ImageProcessing.py  ImageSubtractEnhance.py  README.md
ASIC_calibration/: ####ASIC VALIDATION.py  ####ASIC VALIDATION_Timing_Data.py  Amp_diff_Arctan.py  Amplitude_Regression_Calc.py  Data_to_Arrays.py  NeuralNetwork.py  PYTORCH_NN_PHA.py  PYTORCH_NN_PHA_ToA_ToT copy.py  PYTORCH_NN_PHA_ToA_ToT.py  ProcessTime embre.py  ProcessTime.py  ProcessTimeOverThresh.py  ProcessTime_MLR copy.py  ProcessTime_MLR.py  Process_Amplitude_to_Regression.py  Validated_Positions_PHA.csv  Validated_Positions_Timing.csv  best_model.pth  position_predictor.pth  processed_PHA.csv  processed_timing_data.csv  proportionality_weights_model.pth
Oscilloscope Data Processing/: Amp_Calculations.py  Data_To_Out_File.py  Integral_amp_Calculations.py  Time_Calculations.py  and-16mV-big_ALL_processed.csv
Process_Simulation_Data_Simulation/: DetCount_0_nt_Hits_t1.csv  DetCount_0_nt_Hits_t2.csv  DetCount_0_nt_Hits_t3.csv  DetCount_0_nt_Hits_t5.csv  sim_count_to_poly.py  (+3 more)
White_Scintillator_SiPM_Code/: CMakeLists.txt  CMakePresets.json  run.mac  run1.mac  runSerial.mac  scandet.mac  sim.cc  vis.mac
White_Scintillator_SiPM_Code/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
White_Scintillator_SiPM_Code/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
(+4 files in other folders)
